runtime/snapshots/runtime-classes-get_class_name-GetClassNameMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Array
        class: 0
        elements:
          - Integer: 104
          - Integer: 101
          - Integer: 108
          - Integer: 108
          - Integer: 111
          - Integer: 32
          - Integer: 119
          - Integer: 111
          - Integer: 114
          - Integer: 108
          - Integer: 100
      - address: 1
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 0
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 2
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - Ref: 4
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 3
        type: Array
        class: 0
        elements:
          - Integer: 106
          - Integer: 97
          - Integer: 118
          - Integer: 97
          - Integer: 46
          - Integer: 108
          - Integer: 97
          - Integer: 110
          - Integer: 103
          - Integer: 46
          - Integer: 83
          - Integer: 116
          - Integer: 114
          - Integer: 105
          - Integer: 110
          - Integer: 103
      - address: 4
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 3
            - Integer: 0
            - Integer: 0
            - Integer: 0
    string_pool:
      - string: hello world
        address: 1
      - string: java.lang.String
        address: 4
last_pop_frame:
  locals:
    - ~
    - Ref: 1
    - Ref: 4
  operands: []
  pc: 12
