runtime/snapshots/runtime-classes-get_primitive_array_class_name-GetPrimitiveArrayClassNameMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Array
        class: 5
        elements:
          - Integer: 0
      - address: 1
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - Ref: 3
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 2
        type: Array
        class: 0
        elements:
          - Integer: 91
          - Integer: 73
      - address: 3
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 2
            - Integer: 0
            - Integer: 0
            - Integer: 0
    string_pool:
      - string: "[I"
        address: 3
last_pop_frame:
  locals:
    - ~
    - Ref: 0
    - Ref: 3
  operands: []
  pc: 13
