runtime/snapshots/runtime-collections-concurrent_hash_map_without_concurrency_check-ConcurrentHashMapWithoutConcurrencyCheckMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Instance
        value:
          class: 7
          fields: []
      - address: 1
        type: Array
        class: 8
        elements:
          - Ref: 2
          - Ref: 6
          - Ref: 15
      - address: 2
        type: Instance
        value:
          class: 8
          fields:
            - Ref: 4
            - "Null"
            - Ref: 5
            - "Null"
            - Integer: 0
            - "Null"
            - Integer: 0
      - address: 3
        type: Array
        class: 0
        elements:
          - Integer: 115
          - Integer: 101
          - Integer: 103
          - Integer: 109
          - Integer: 101
          - Integer: 110
          - Integer: 116
          - Integer: 115
      - address: 4
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 3
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 5
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 6
        type: Instance
        value:
          class: 8
          fields:
            - Ref: 8
            - "Null"
            - Ref: 13
            - "Null"
            - Integer: 0
            - "Null"
            - Integer: 0
      - address: 7
        type: Array
        class: 0
        elements:
          - Integer: 115
          - Integer: 101
          - Integer: 103
          - Integer: 109
          - Integer: 101
          - Integer: 110
          - Integer: 116
          - Integer: 77
          - Integer: 97
          - Integer: 115
          - Integer: 107
      - address: 8
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 7
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 9
        type: Array
        class: 0
        elements:
          - Integer: 105
          - Integer: 110
          - Integer: 116
      - address: 10
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 9
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 11
        type: Array
        class: 3
        elements: []
      - address: 12
        type: Array
        class: 8
        elements: []
      - address: 13
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 14
        type: Array
        class: 0
        elements:
          - Integer: 48
          - Integer: 49
          - Integer: 50
          - Integer: 51
          - Integer: 52
          - Integer: 53
          - Integer: 54
          - Integer: 55
          - Integer: 56
          - Integer: 57
          - Integer: 97
          - Integer: 98
          - Integer: 99
          - Integer: 100
          - Integer: 101
          - Integer: 102
          - Integer: 103
          - Integer: 104
          - Integer: 105
          - Integer: 106
          - Integer: 107
          - Integer: 108
          - Integer: 109
          - Integer: 110
          - Integer: 111
          - Integer: 112
          - Integer: 113
          - Integer: 114
          - Integer: 115
          - Integer: 116
          - Integer: 117
          - Integer: 118
          - Integer: 119
          - Integer: 120
          - Integer: 121
          - Integer: 122
      - address: 15
        type: Instance
        value:
          class: 8
          fields:
            - Ref: 17
            - "Null"
            - Ref: 13
            - "Null"
            - Integer: 0
            - "Null"
            - Integer: 0
      - address: 16
        type: Array
        class: 0
        elements:
          - Integer: 115
          - Integer: 101
          - Integer: 103
          - Integer: 109
          - Integer: 101
          - Integer: 110
          - Integer: 116
          - Integer: 83
          - Integer: 104
          - Integer: 105
          - Integer: 102
          - Integer: 116
      - address: 17
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 16
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 18
        type: Instance
        value:
          class: 12
          fields: []
      - address: 19
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 20
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 21
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 22
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 23
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 24
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 25
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 26
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 27
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 28
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 29
        type: Array
        class: 0
        elements:
          - Integer: 115
          - Integer: 105
          - Integer: 122
          - Integer: 101
          - Integer: 67
          - Integer: 116
          - Integer: 108
      - address: 30
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 29
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 31
        type: Array
        class: 0
        elements:
          - Integer: 116
          - Integer: 114
          - Integer: 97
          - Integer: 110
          - Integer: 115
          - Integer: 102
          - Integer: 101
          - Integer: 114
          - Integer: 73
          - Integer: 110
          - Integer: 100
          - Integer: 101
          - Integer: 120
      - address: 32
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 31
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 33
        type: Array
        class: 0
        elements:
          - Integer: 98
          - Integer: 97
          - Integer: 115
          - Integer: 101
          - Integer: 67
          - Integer: 111
          - Integer: 117
          - Integer: 110
          - Integer: 116
      - address: 34
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 33
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 35
        type: Array
        class: 0
        elements:
          - Integer: 99
          - Integer: 101
          - Integer: 108
          - Integer: 108
          - Integer: 115
          - Integer: 66
          - Integer: 117
          - Integer: 115
          - Integer: 121
      - address: 36
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 35
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 37
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 38
        type: Array
        class: 0
        elements:
          - Integer: 118
          - Integer: 97
          - Integer: 108
          - Integer: 117
          - Integer: 101
      - address: 39
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 38
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 40
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 41
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 42
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 43
        type: Instance
        value:
          class: 6
          fields:
            - Ref: 54
            - "Null"
            - Long: 1
            - Integer: 12
            - Integer: 0
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 44
        type: Array
        class: 0
        elements:
          - Integer: 106
          - Integer: 97
          - Integer: 118
          - Integer: 97
          - Integer: 46
          - Integer: 118
          - Integer: 101
          - Integer: 114
          - Integer: 115
          - Integer: 105
          - Integer: 111
          - Integer: 110
      - address: 45
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 44
            - Integer: 0
            - Integer: 560567564
            - Integer: 0
      - address: 46
        type: Array
        class: 0
        elements:
          - Integer: 50
          - Integer: 52
      - address: 47
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 46
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 48
        type: Array
        class: 8
        elements: []
      - address: 49
        type: Instance
        value:
          class: 27
          fields: []
      - address: 50
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 51
        type: Array
        class: 0
        elements:
          - Integer: 98
          - Integer: 121
          - Integer: 116
          - Integer: 101
      - address: 52
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 51
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 53
        type: Instance
        value:
          class: 3
          fields:
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - Integer: 0
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
            - "Null"
      - address: 54
        type: Array
        class: 25
        elements:
          - "Null"
          - "Null"
          - "Null"
          - "Null"
          - "Null"
          - Ref: 55
          - "Null"
          - "Null"
          - "Null"
          - "Null"
          - "Null"
          - "Null"
          - "Null"
          - "Null"
          - "Null"
          - "Null"
      - address: 55
        type: Instance
        value:
          class: 25
          fields:
            - Integer: 560575589
            - Ref: 45
            - Ref: 47
            - "Null"
    string_pool:
      - string: "24"
        address: 47
      - string: baseCount
        address: 34
      - string: byte
        address: 52
      - string: cellsBusy
        address: 36
      - string: int
        address: 10
      - string: java.version
        address: 45
      - string: segmentMask
        address: 8
      - string: segmentShift
        address: 17
      - string: segments
        address: 4
      - string: sizeCtl
        address: 30
      - string: transferIndex
        address: 32
      - string: value
        address: 39
last_pop_frame:
  locals:
    - ~
    - Ref: 43
    - Ref: 47
  operands: []
  pc: 28
