runtime/snapshots/runtime-inheritance-constructor_chain-ConstructorChainMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Instance
        value:
          class: 6
          fields:
            - Integer: 42
    string_pool: []
last_pop_frame:
  locals:
    - ~
    - Ref: 0
    - Integer: 42
  operands: []
  pc: 16
