runtime/snapshots/runtime-inheritance-invoke_parent_method-InvokeParentMethodMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Instance
        value:
          class: 6
          fields:
            - Integer: 42
    string_pool: []
last_pop_frame:
  locals:
    - ~
    - Ref: 0
    - Integer: 42
  operands: []
  pc: 14
