runtime/snapshots/runtime-inheritance-invoke_parent_setter-InvokeParentSetterMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Instance
        value:
          class: inheritance/invoke_parent_setter/InvokeParentSetterMain$Child
          fields:
            - Integer: 224
    string_pool: []
last_pop_frame:
  locals:
    - ~
    - Ref: 0
  operands: []
  pc: 16
