runtime/snapshots/runtime-string-basic_literal-BasicStringLiteralMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Array
        class: 0
        elements:
          - Integer: 104
          - Integer: 101
          - Integer: 108
          - Integer: 108
          - Integer: 111
      - address: 1
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 0
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 2
        type: Array
        class: 5
        elements: []
      - address: 3
        type: Instance
        value:
          class: 6
          fields: []
    string_pool:
      - string: hello
        address: 1
last_pop_frame:
  locals:
    - ~
    - Ref: 1
    - Integer: 5
  operands: []
  pc: 9
