runtime/snapshots/runtime-string-combined_literal_and_new-CombinedStringLiteralAndNewMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Array
        class: 0
        elements:
          - Integer: 104
          - Integer: 101
          - Integer: 108
          - Integer: 108
          - Integer: 111
      - address: 1
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 0
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 2
        type: Array
        class: 5
        elements: []
      - address: 3
        type: Instance
        value:
          class: 6
          fields: []
      - address: 4
        type: Instance
        value:
          class: 2
          fields:
            - Ref: 0
            - Integer: 0
            - Integer: 0
            - Integer: 0
    string_pool:
      - string: hello
        address: 1
last_pop_frame:
  locals:
    - ~
    - Ref: 1
    - Ref: 1
    - Ref: 4
  operands: []
  pc: 17
